# occupancy-backend

./: .gitignore  Cargo.toml  README.md  make_gb_predictions.bash  make_lstm_predictions.bash
.github/workflows/: cicd.yml
gb_prediction/: make_prediction.py  make_predictions.py  requirements.txt
lstm_prediction/: make_predictions.py  model_3lstm.keras  requirements.txt
src/: main.rs
src/database/: sqlite.rs
src/predictor/: gb_regressor.rs  knn_config.rs  knn_regressor.rs  lstm_regressor.rs  mod.rs
src/scraper/: config.rs  mod.rs  scraper.rs
src/scraper/sta/: gym.rs  main_library.rs  mod.rs
src/server/: mod.rs  myresponse.rs  server.rs
src/timing/: daily.rs  mod.rs  schedule.rs  sleeper.rs  uk_datetime_now.rs
