[package]
name = "occupancy-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
regex = "1.10.4"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
chrono = "0.4.38"
chrono-tz = "0.9.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
reqwest = "0.12.4"

